# 9_evaluation_selection

./: .gitignore  README.md  kaggle.md  noxfile.py  pyproject.toml
.github/workflows/: lint.yml  python-app.yml  tests.yml
src/eval_sel/: data.py  gridcv.py  kaggle.py  pipeline.py  train.py  tree.py
tests/: test_pipeline.py  test_train.py
