[tool.poetry]
name = "9_evaluation_selection"
version = "0.1.0"
description = "Model evaluation and selection"
authors = ["Evgeniy Tkachenko <et.coder@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
