[tool.poetry]
name = "eval_sel"
version = "0.1.0"
description = "Model evaluation and selection"
authors = ["Evgeniy Tkachenko <et.coder@gmail.com>"]

[tool.poetry.scripts]
train = "eval_sel.train:train"
tree = "eval_sel.tree:train"
gridcv = "eval_sel.gridcv:train"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.22.3"
pandas = "^1.4.2"
click = "^8.1.3"
sklearn = "^0.0"
scikit-learn = "^1.0.2"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
Faker = "^13.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
